<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#AEABAB"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00BCD4"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/Titulo"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/txv_nombre" />

            <EditText
                android:id="@+id/edt_nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/Edidt_1"
                android:minHeight="48dp"
                android:textColorHint="#BA0F0F" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/txv_edad" />

            <EditText
                android:id="@+id/edt_edad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/Edidt_2"
                android:minHeight="48dp"
                android:textColorHint="#BA0F0F" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/txv_email" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/Edidt_3"
                android:minHeight="48dp"
                android:textColorHint="#BA0F0F" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/titulo_radios" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/hombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rd_hombre" />

            <RadioButton
                android:id="@+id/mujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rd_mujer" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/titulo_checks" />

        <CheckBox
            android:id="@+id/chck1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check1" />

        <CheckBox
            android:id="@+id/chck2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check2" />

        <CheckBox
            android:id="@+id/chck3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check3" />

        <CheckBox
            android:id="@+id/chck4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <Button
                android:id="@+id/inciar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:text="@string/btn1" />

            <Button
                android:id="@+id/salir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:text="@string/btn2" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>